--- a/angular.json
+++ b/angular.json
@@ -31,14 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/primeng/resources/themes/luna-amber/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "src/styles.scss"
             ],
             "scripts": [
-              // "https://js.paystack.co/v1/inline.js"
             ]
           },
           "configurations": {
