--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@angular/animations": "~11.0.6",
     "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.6",
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
+    "@angular/compiler-cli": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
     "@angular/platform-browser": "~11.0.6",
@@ -29,12 +29,13 @@
     "@ngrx/store-devtools": "^10.1.2",
     "angularfire2": "^5.4.2",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.6",
